<resources>
    <string name="app_name">ParkingClientApplication</string>

    <!-- Login strings -->
    <string name="form_username">Usuario</string>
    <string name="button_access">Acceso</string>


    <!-- Buttons Login -->
    <string name="registro">¿No tienes una cuenta? Hazte una</string>
    <string name="correo">Correo</string>

    <!-- Vehicles list -->
    <string name="Vehicle">Selecciona un vehículo</string>
    <string name="Car">Coche</string>
    <string name="Motorbike">Moto</string>
    <string name="Truck">Camión</string>

    <string-array name="vehicles_array">
        <item>@string/Vehicle</item>
        <item>@string/Car</item>
        <item>@string/Motorbike</item>
        <item>@string/Truck</item>
    </string-array>

    <!-- Date list -->
    <string name="d0120">01/20</string>
    <string name="d0220">02/20</string>
    <string name="d0320">03/20</string>
    <string name="d0420">04/20</string>
    <string name="d0520">05/20</string>
    <string name="d0620">06/20</string>
    <string name="d0720">07/20</string>
    <string name="d0820">08/20</string>
    <string name="d0920">09/20</string>

    <string-array name="date_array">
        <item>@string/d0120</item>
        <item>@string/d0220</item>
        <item>@string/d0320</item>
        <item>@string/d0420</item>
        <item>@string/d0520</item>
        <item>@string/d0620</item>
        <item>@string/d0720</item>
        <item>@string/d0820</item>
        <item>@string/d0920</item>
    </string-array>
    <string name="confirmar">Confirmar</string>

    <string name="title_activity_client_map">ClientMapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="update_dates">Actualizar datos</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="username">Usuario</string>

    <string name="title_activity_guide">GuideActivity</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error">Error</string>

    <string name="correoInvalido">Correo inválido</string>
    <string name="passwordInvalido">Contraseña corta (menos de 6 caracteres)</string>

    <!-- Layout text -->
    <string name="tipo_de_vehiculo">Tipo de vehículo</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="matr_cula">Matrícula</string>
    <string name="infoAddVehiculo">Completa los siguientes campos relacionados con los datos de tu vehículo</string>
    <string name="addVehicle">Añadir vehículo</string>
    <string name="aparcamiento">Aparcamiento</string>
    <string name="tarjeta">Tarjeta</string>
    <string name="precio_actual">Precio actual</string>
    <string name="fechaReserva">Fecha realización reserva</string>
    <string name="estado_reserva">Estado reserva</string>
    <string name="guiadoAcces">Acceder al guiado</string>
    <string name="inicioCuenta">Pulsa aqui para iniciar con una cuenta</string>
    <string name="escanear_qr">Escanear QR</string>
    <string name="limpiar">Limpiar</string>
    <string name="localizar">Localizar</string>
    <string name="perfil">Perfil</string>
    <string name="perfil_bancario">Perfil bancario</string>
    <string name="mis_reservas">Mis reservas</string>
    <string name="mis_veh_culos">Mis vehículos</string>
    <string name="mapa">Mapa</string>
    <string name="desconectar">Desconectar</string>
    <string name="acciones">Acciones</string>
    <string name="plazaInfo">Obtener información plaza</string>
    <string name="acceder_al_guiado">Acceder al guiado</string>
    <string name="parking">Parking</string>
    <string name="direccion">Direccion</string>
    <string name="estado_activo">Estado: Activo</string>
    <string name="ocupacion">Ocupación: 50/100</string>
    <string name="precio">Precio: 2€/h</string>
    <string name="reservaInfo">Pulsa la ventana para reservar</string>
    <string name="numeroTarjeta">Número de la tarjeta</string>
    <string name="defaultNumber">XXXX-XXXX-XXXX-XXXX</string>
    <string name="fecha_de_caducidad">Fecha de caducidad</string>
    <string name="nmero_seguridad">Número seguridad</string>
    <string name="number">Number</string>
    <string name="nombre_asociado">Nombre asociado a la tarjeta</string>
    <string name="nombre">Nombre</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="asociar_perfil">Asociar perfil</string>
    <string name="borrar_perfil">Borrar perfil</string>
    <string name="datos_reserva">Datos de la reserva</string>



    <!-- Google Directions API key -->
    <string name="googleDirection">AIzaSyBn0JtWo8gDx4MIUwBdGISs7_YimRHqy7A</string>

    <!-- Fragment and activities text -->
    <string name="plazaAdjudicada">Esperando a obtener la plaza adjudicada</string>
    <string name="rutaCalculada">Calculando la ruta</string>
    <string name="lugarInicio">Está aqui</string>



</resources>
