<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:paddingTop="56dp"
              android:paddingLeft="24dp"
              android:paddingRight="24dp"
              android:gravity="center"
              android:background="@color/backgroundFinal"
              tools:context=".fragments.BankProfileFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/numeroTarjeta"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edNumberCard"
                android:hint="@string/defaultNumber"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:orientation="horizontal">
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:layout_marginEnd="10dp"
                      android:orientation="vertical">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/fecha_de_caducidad"/>
                <Spinner
                        android:id="@+id/date_spinner"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/nmero_seguridad"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edSecurityNumber"
                        android:hint="@string/number"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nombre_asociado"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">

    <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edNameCard"
            android:hint="@string/nombre"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:orientation="horizontal">


        <FrameLayout android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/bUpdateBankProfile"
                    android:textColor="@color/whiteText"
                    app:backgroundTint="@color/blueButton"
                    android:visibility="invisible"
                    android:text="@string/guardar_cambios"/>

            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/bCreateBankProfile"
                    android:textColor="@color/whiteText"
                    app:backgroundTint="@color/blueButton"
                    android:text="@string/asociar_perfil"/>
        </FrameLayout>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/bDeleteBankProfile"
            android:textColor="@color/whiteText"
            app:backgroundTint="@color/blueButton"
            android:text="@string/borrar_perfil"/>

    </LinearLayout>

    <ProgressBar
            android:id="@+id/bankProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minHeight="50dp"
            android:minWidth="250dp"
            android:max="100"
            android:indeterminate="true"
            android:progress="0"
            android:visibility="invisible"/>

</LinearLayout>