<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:gravity="center"
              android:orientation="vertical"
              android:paddingTop="56dp"
              android:paddingLeft="24dp"
              android:paddingRight="24dp"
              android:background="@color/backgroundFinal"
              tools:context=".fragments.VehicleAddFragment">


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edName"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/username"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edPassword"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/password"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edEmail"
                android:maxLines="1"
                android:hint="@string/email"/>

    </android.support.design.widget.TextInputLayout>

    <Button

            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_dates"
            android:textColor="@color/whiteText"
            android:layout_gravity="center"
            app:backgroundTint="@color/blueButton"/>

    <ProgressBar
            android:id="@+id/profileProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="250dp"
            android:max="100"
            android:indeterminate="true"
            android:progress="0"
            android:visibility="invisible"/>


</LinearLayout>