<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              tools:context=".fragments.LoginClientFragment">

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edUsernameRegister"
                android:hint="@string/form_username"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edEmailRegister"
                android:hint="@string/correo"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edPasswordRegister"
                android:hint="Contraseña"/>

    </android.support.design.widget.TextInputLayout>

        <Button

                android:id="@+id/buttonAccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_access"
                android:textColor="@color/whiteText"
                android:layout_gravity="center"
                app:backgroundTint="@color/blueButton"/>

    <Button

            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textColor="@color/whiteText"
            android:layout_gravity="center"
            app:backgroundTint="@color/blueButton"/>

</LinearLayout>